# IOTA_Health

./: LICENSE  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/iota_logic/: check_channel.rs  initiate.rs  mod.rs  stats.rs
app/src/iota_logic/roles/: authorities.rs
app/src/views/: mod.rs  path.rs
app/src/views/app/: authenticate.rs  home.rs  index.rs  mod.rs  office.rs  register.rs  scan.rs
app/static/: authenticate.html  datainput.html  home.html  index.html  main.js  manifest.json  office.html  service_worker.js
app/static/css/: main.css
