[package]
name = "app"
version = "0.1.0"
authors = ["jendrik.mann@uni-oldenburg.de <gismo234>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1.0"
actix-files = "0.2.2"
iota-streams = { git = "https://github.com/iotaledger/streams.git", branch = "chrysalis-2" }
iota-client = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
anyhow = { version = "1.0", default-features = false }
rand = "0.7.3"
tokio = {version = "1.6"}
futures = { version = "0.3.8", default-features = false  }
serde = "1.0.1"